Correct method so that it will return empty lists if no challenges fit the requirements