@@ -15,6 +15,7 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import java.security.SecureRandom;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -77,7 +78,7 @@ public class UserSolutionServiceImp implements IUserSolutionService {
                         .userId(String.valueOf(savedDocument.getUserId()))
                         .languageId(String.valueOf(savedDocument.getLanguageId()))
                         .challengeId(String.valueOf(savedDocument.getChallengeId()))
-                        .solutionText(savedDocument.getSolutionDocument().get(0).getSolutionText())
+                        .solutionText(savedDocument.getSolutionDocument().getFirst().getSolutionText())
                         .score(savedDocument.getScore())
                         .build())
                 .doOnSuccess(userSolutionDocument -> log.info("Successfully POSTed solution"))
@@ -217,19 +218,50 @@ public class UserSolutionServiceImp implements IUserSolutionService {
         return Flux.fromIterable(userSolutionsChallenge);
     }
 
-    public Mono<ChallengesCompletedAndSavedStatisticsDTO> getCompletedAndSavedChallengesStatistics() {
-        Flux<CompletedChallengesDTO> completedChallenges = userSolutionRepository.findByStatus(ChallengeStatus.ENDED)
-                .flatMap(userSolutionDocument ->
-                        converter.fromUserSolutionDocumentToCompletedChallengesDTO(Flux.just(userSolutionDocument)));
+//    public Mono<ChallengesCompletedAndSavedStatisticsDTO> getCompletedAndSavedChallengesStatistics() {
+//        Flux<CompletedChallengesDTO> completedChallenges = userSolutionRepository.findByStatus(ChallengeStatus.ENDED)
+//                .flatMap(userSolutionDocument ->
+//                        converter.fromUserSolutionDocumentToCompletedChallengesDTO(Flux.just(userSolutionDocument)));
+//
+//        Flux<SavedChallengesDTO> savedChallenges = userSolutionRepository.findByBookmarked(true)
+//                .flatMap(userSolutionDocument ->
+//                        converter.fromUserSolutionDocumentToSavedChallengesDTO(Flux.just(userSolutionDocument)));
+//
+//        return Mono.zip(
+//                completedChallenges.collectList(),
+//                savedChallenges.collectList(),
+//                ChallengesCompletedAndSavedStatisticsDTO::new
+//        );
+//    }
 
-        Flux<SavedChallengesDTO> savedChallenges = userSolutionRepository.findByBookmarked(true)
-                .flatMap(userSolutionDocument ->
-                        converter.fromUserSolutionDocumentToSavedChallengesDTO(Flux.just(userSolutionDocument)));
+    protected Mono<ChallengesListsDto> getCompletedAndSavedChallengesStatistics(String userId, String languageId) {
+        UUID userUuid = UUID.fromString(userId);
+        UUID languageUuid = UUID.fromString(languageId);
 
+        Flux<UserSolutionDocument> completedChallengesDocs = userSolutionRepository
+                .findByUserIdAndLanguageIdAndStatus(userUuid, languageUuid, ChallengeStatus.ENDED);
+        Flux<UserSolutionDocument> savedChallengesDocs = userSolutionRepository
+                .findByUserIdAndLanguageIdAndBookmarked(userUuid, languageUuid, true);
+
+        // Convert completed challenges if documents exist, otherwise an empty Flux
+        Flux<UserChallengeDto> completedChallenges = completedChallengesDocs
+                .collectList()
+                .flatMapMany(list -> list.isEmpty()
+                        ? Flux.empty()
+                        : converter.fromUserSolutionDocumentToUserChallengeDto(Flux.fromIterable(list)));
+
+        // Convert saved challenges if documents exist, otherwise an empty Flux
+        Flux<UserChallengeDto> savedChallenges = savedChallengesDocs
+                .collectList()
+                .flatMapMany(list -> list.isEmpty()
+                        ? Flux.empty()
+                        : converter.fromUserSolutionDocumentToUserChallengeDto(Flux.fromIterable(list)));
+
+        // Return a ChallengesListsDto with the lists of challenges
         return Mono.zip(
-                completedChallenges.collectList(),
-                savedChallenges.collectList(),
-                ChallengesCompletedAndSavedStatisticsDTO::new
+                completedChallenges.collectList().defaultIfEmpty(Collections.emptyList()),
+                savedChallenges.collectList().defaultIfEmpty(Collections.emptyList()),
+                ChallengesListsDto::new // Combine both lists into a DTO
         );
     }
 
